--- a/app/assets/stylesheets/components/_user_actions_mobile.scss
+++ b/app/assets/stylesheets/components/_user_actions_mobile.scss
@@ -2,18 +2,27 @@
 .c-user-actions-mobile {
   position: absolute;
   top: 0;
-  left: 0;
-  width: 100%;
+  left: -100%;
+  width: 0;
   height: 100vh;
   z-index: 4;
-
   background-color: $secondary-color;
+  transition: all .2s $easeOutCubic;
+
+  // & * { display: none; }
+
+  &.-active {
+    left: 0;
+    width: 100%;
+
+    // & * { display: inherit; }
+  }
 
   nav {
     margin-bottom: $base-space;
 
     .back {
-      .js-action-back {
+      .icon-arrow {
         transform: rotate(180deg);
       }
     }
