Split investigator intro into partials depending on device

--- a/app/views/investigators/show.html.erb
+++ b/app/views/investigators/show.html.erb
@@ -3,177 +3,10 @@
 
 <section class="l-app -full -secondary">
   <% if !browser.device.mobile? %>
-    <div class="l-app-map">
-      <div id="map" class="c-map"></div>
-    </div>
+    <%= render "desktop_show_intro", inv_user: inv_user %>
   <% else %>
-    <div id="userActionsMobile">
-      <%= render 'shared/user_actions_mobile'%>
-
-      <div class="c-mobile-btns-container">
-        <button class="c-btn -secondary -border -thin js-btn-more">
-          <svg class="c-icon -normal -inverse">
-            <use xlink:href="#icon-plus"></use>
-          </svg>
-        </button>
-
-
-        <div id="followButton">
-          <% if user_signed_in? %>
-            <button class="c-btn -secondary -inverse -thin js-btn-follow"
-              data-followed="<%= @followed %>"
-              data-id="<%= @followed_id %>"
-              data-resource="<%= @followed_resource %>">
-                <% if (@followed) %>
-                  <svg class="c-icon -secondary -normal">
-                    <use xlink:href="#icon-minus"></use>
-                  </svg>
-                <% else %>
-                  <svg class="c-icon -secondary -normal">
-                    <use xlink:href="#icon-collaborators"></use>
-                  </svg>
-                <% end %>
-            </button>
-          <% else %>
-            <a href="/users/sign_in" class="c-btn -secondary -inverse -thin">
-              <svg class="c-icon -normal">
-                <use xlink:href="#icon-collaborators"></use>
-              </svg>
-            </a>
-          <% end %>
-        </div>
-      </div>
-    </div>
+    <%= render "mobile_show_intro", inv_user: inv_user %>
   <% end %>
-
-  <% if !browser.device.mobile? %>
-    <%= render "shared/legend_people" %>
-  <% end %>
-
-  <div class="l-app-title">
-    <div class="">
-      <div class="row collapse wrapper">
-        <div class="column small-12 medium-8">
-          <div class="c-avatar <% if !browser.device.mobile? %>-big<% else %>-medium<% end %> -ph -mg-bt"
-               style="<% if inv_user.present? %>
-                        background-image: url(<%= inv_user.avatar_url(:thumb) %>)
-                      <% end %>">
-          </div>
-        </div>
-      </div>
-      <div class="row collapse wrapper">
-        <div class="column small-12 medium-8">
-          <div class="c-title-btn">
-            <h1><%= @investigator.try(:name) %></h1>
-            <% if !browser.device.mobile? %>
-              <% if user_signed_in? && current_user.investigator == @investigator %>
-                <%= link_to (t 'not_me'), remove_relation_investigator_path(@investigator), method: :patch, class: 'c-btn -transparent' %>
-              <% elsif user_signed_in? && current_user.investigator.blank? && @investigator.user.blank? %>
-                <%= link_to (t 'this_is_me'), relation_request_investigator_path(@investigator), method: :patch, class: 'c-btn -transparent' %>
-              <% end %>
-            <% end %>
-          </div>
-
-          <div class="row">
-            <div class="column small-12 medium-6">
-              <ul class="c-pipe-list">
-                <% if @investigator.organizations.any? %>
-                  <li>
-                    <%= link_to @investigator.organizations.first.try(:name), organization_path(@investigator.organizations.first.slug_or_id), class: '-clickable -hv' %>
-                  </li>
-                <% end %>
-                <% if inv_user.present? && inv_user.position.present? %>
-                  <li><%= inv_user.position %></li>
-                <% end %>
-              </ul>
-              <ul class="c-pipe-list">
-                <li><%= @following %> Following</li>
-                <li><%= @followers %> Followers</li>
-              </ul>
-            </div>
-
-            <div class="column small-12 medium-6">
-              <ul class="c-pipe-list">
-                <% if inv_user.present? %>
-                  <% if not_blank?(inv_user.twitter_account) %>
-                    <li>
-                      <a href="https://twitter.com/<%= inv_user.twitter_account %>" class="-clickable -hv" target="_blank">
-                        Twitter
-                      </a>
-                    </li>
-                  <% end %>
-                  <% if not_blank?(inv_user.linkedin_account) %>
-                    <li>
-                      <a href="https://www.linkedin.com/in/<%= inv_user.linkedin_account %>" class="-clickable -hv" target="_blank">
-                        Linkedin
-                      </a>
-                    </li>
-                  <% end %>
-                <% end %>
-                <li>
-                  <a href="http://www.ncbi.nlm.nih.gov/pubmed?term=<%= @investigator.name %>%5BAuthor%5D" class="-clickable -hv" target="_blank">
-                    Pubmed
-                  </a>
-                </li>
-              </ul>
-            </div>
-          </div>
-
-          <% if browser.device.mobile? %>
-            <div class="c-title-btn">
-              <% if user_signed_in? && current_user.investigator == @investigator %>
-                <%= link_to (t 'not_me'), remove_relation_investigator_path(@investigator), method: :patch, class: 'c-btn -transparent' %>
-              <% elsif user_signed_in? && current_user.investigator.blank? && @investigator.user.blank? %>
-                <%= link_to (t 'this_is_me'), relation_request_investigator_path(@investigator), method: :patch, class: 'c-btn -transparent' %>
-              <% end %>
-            </div>
-          <% end %>
-
-          <% if !browser.device.mobile? %>
-            <table class="c-numbers-list">
-              <thead>
-                <tr>
-                  <th><%= t 'projects' %></th>
-                  <th><%= t 'posts' %></th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <td><%= @projects.size %></td>
-                  <td><%= @posts.size %></td>
-                </tr>
-              </tbody>
-            </table>
-          <% end %>
-
-        </div>
-
-        <% if !browser.device.mobile? %>
-          <div class="column small-12 medium-4">
-            <%= render "shared/user_actions" %>
-          </div>
-        <% end %>
-      </div>
-
-      <% if browser.device.mobile? %>
-        <div class="c-counters">
-          <div class="wrapper">
-            <div class="row">
-              <div class="column small-12">
-                <h3>Projects</h3>
-                <span class="amount"><%= @projects.size %></span>
-              </div>
-              <div class="column small-12">
-                <h3>Posts</h3>
-                <span class="amount"><%= @posts.size %></span>
-              </div>
-            </div>
-          </div>
-        <% end %>
-
-      </div>
-    </div>
-  </div>
 
   <div class="l-app-navbar">
     <div class="wrapper">
