--- a/app/assets/stylesheets/components/_modal.scss
+++ b/app/assets/stylesheets/components/_modal.scss
@@ -48,7 +48,7 @@
   .modal-content {
     position: relative;
     width: 100%;
-    max-height: 95vh;
+    max-height: 95%;
     padding: $small-box-space;
     overflow: auto;
     -webkit-overflow-scrolling: touch;
