--- a/app/assets/stylesheets/components/_form_message.scss
+++ b/app/assets/stylesheets/components/_form_message.scss
@@ -6,13 +6,12 @@
   left: 50%;
   transform: translate(-50%,-70px);
   transition: all 0.2s $easeInOutCubic;
-  z-index: 2;
+  z-index: 5;
   background: white;
   padding: 20px;
   width: 100%;
   border: 1px solid $border-color-1;
   box-shadow: $box-shadow;
-
 
   & > form .form-row {
     label,
@@ -38,6 +37,19 @@
     border-left: 1px solid $border-color-1;
     border-top: 1px solid $border-color-1;
 
+  }
+
+  &.-mobile {
+    left: 0;
+    width: calc(100vw - 30px);
+
+    &:before {
+      left: 20px;
+    }
+
+    &.-active {
+      transform: translate(0, 14px);
+    }
   }
 
   &.-arr-right {
