--- a/app/assets/stylesheets/components/_summary_info.scss
+++ b/app/assets/stylesheets/components/_summary_info.scss
@@ -1,7 +1,10 @@
 
 .c-summary-info {
-  padding-top: $base-space;
   pointer-events: all;
+
+  @media #{$mq-small} {
+    padding-top: $base-space;
+  }
 
   .column {
     display: flex;
