--- a/app/assets/stylesheets/components/_mobile-btns-container.scss
+++ b/app/assets/stylesheets/components/_mobile-btns-container.scss
@@ -1,12 +1,24 @@
 
 .c-mobile-btns-container {
   position: absolute;
+  display: flex;
+  flex-flow: column;
   top: $small-box-space;
   left: $small-box-space;
   z-index: 2;
 
   &:last-child {
+    margin-right: 0;
     margin-bottom: 0;
+  }
+
+  &.-vertical {
+    flex-flow: row;
+
+    .action-btn {
+      margin-right: 5px;
+      margin-bottom: 0;
+    }
   }
 
   .action-btn {
