--- a/app/assets/stylesheets/layouts/_content.scss
+++ b/app/assets/stylesheets/layouts/_content.scss
@@ -21,7 +21,11 @@
 
   .l-content-article {
     font-family: $base-font-family-light;
-    padding-bottom: $box-space;
+    padding-bottom: $base-space;
+
+    @media #{$mq-small} {
+      padding-bottom: $box-space;
+    }
 
     &:last-child {
       padding-bottom: 0;
@@ -36,9 +40,14 @@
 
 .l-content-section {
   font-family: $base-font-family-light;
-  padding-top: $box-space;
-  padding-bottom: $box-space;
+  padding-top: $inline-space;
+  padding-bottom: $inline-space;
   border-bottom: 1px solid $border-color-1;
+
+  @media #{$mq-small} {
+    padding-top: $box-space;
+    padding-bottom: $box-space;
+  }
 
   .column {
     flex-flow: column;
