--- a/app/views/countries/show.html.erb
+++ b/app/views/countries/show.html.erb
@@ -1,44 +1,12 @@
 
 <% title @country.country_name %>
 
-<section class="l-app -full">
-
-  <div class="l-app-map">
-    <div id="map" class="c-map"></div>
-  </div>
-
-  <%= render "shared/legend_people" %>
-
-  <div class="l-app-title">
-    <div class="wrapper">
-      <div class="row collapse">
-        <div class="column small-8">
-          <h1><%= @country.country_name %></h1>
-          <table class="c-numbers-list">
-            <thead>
-              <tr>
-                <th><%= t 'projects' %></th>
-                <th><%= t 'people' %></th>
-                <th><%= t 'events' %></th>
-                <th><%= t 'organizations' %></th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td><%= @projects.size %></td>
-                <td><%= @people.size %></td>
-                <td><%= @events.size %></td>
-                <td><%= @country.organizations_count %></td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
-        <div class="column small-4">
-          <%= render "shared/user_actions" %>
-        </div>
-      </div>
-    </div>
-  </div>
+<section class="l-app -full -secondary">
+  <% if !browser.device.mobile? %>
+    <%= render "desktop_show_intro" %>
+  <% else %>
+    <%= render "mobile_show_intro" %>
+  <% end %>
 
   <div class="l-app-navbar">
     <div class="wrapper">
