--- a/app/views/countries/_mobile_show_intro.html.erb
+++ b/app/views/countries/_mobile_show_intro.html.erb
@@ -3,7 +3,9 @@
 <div class="l-app-title">
   <div class="row collapse -centered">
     <div class="column small-12 medium-8">
-      <h1><%= @country.country_name %></h1>
+      <div class="c-title-btn">
+        <h1 class="-no-mg"><%= @country.country_name %></h1>
+      </div>
     </div>
   </div>
   <div class="c-counters">
