Mobile Investigators lists

--- a/app/views/investigators/_list.html.erb
+++ b/app/views/investigators/_list.html.erb
@@ -3,16 +3,20 @@
     <% items.each do |e| %>
       <div class="column small-12 medium-4">
         <div class="c-card -person">
-          <div class="c-avatar -ph -mg-bt"
-               style="<% if e.user.present? %>
-                        background-image: url(<%= e.user.avatar_url(:thumb) %>)
-                      <% end %>">
+          <div class="icons">
+            <div class="c-avatar -ph<% if !browser.device.mobile? %> -mg-bt<% end %>"
+                 style="<% if e.user.present? %>
+                          background-image: url(<%= e.user.avatar_url(:thumb) %>)
+                        <% end %>">
+            </div>
           </div>
-          <h2><%= link_to e.name, investigator_path(e.slug_or_id) %></h2>
-          <% e.organizations.each do |o|%>
-            <h3><%= link_to o.name, organization_path(o.slug_or_id) %></h3>
-            <h3><%= o.addresses.map{|a| [a.city, a.country_name]}.uniq.join(', ') %></h3>
-          <% end %>
+          <div>
+            <h2><%= link_to e.name, investigator_path(e.slug_or_id) %></h2>
+            <% e.organizations.each do |o|%>
+              <h3><%= link_to o.name, organization_path(o.slug_or_id) %></h3>
+              <h3><%= o.addresses.map{|a| [a.city, a.country_name]}.uniq.join(', ') %></h3>
+            <% end %>
+          </div>
         </div>
       </div>
     <% end %>
