--- a/app/views/users/_network.html.erb
+++ b/app/views/users/_network.html.erb
@@ -1,7 +1,29 @@
 <div class="row collapse">
   <div class="column small-12 medium-8 -column">
     <article>
-      <div class="l-content -no-br -br-bottom wrapper">
+      <% if browser.device.mobile? %>
+        <div id="userSearch" class="l-content wrapper">
+          <div class="c-input-row">
+            <div id="search-input"></div>
+            <svg class="c-icon icon-search -medium -secondary">
+              <use xlink:href="#icon-search"></use>
+            </svg>
+            <svg class="c-icon icon-close -medium -secondary -hidden js-clear-search">
+              <use xlink:href="#icon-close"></use>
+            </svg>
+          </div>
+
+          <div class="c-spinner -start">
+            <div class="spinner-box">
+              <div class="icon"></div>
+            </div>
+          </div>
+        </div>
+
+        <div id="search-list" class="l-content -no-br -no-top-padd wrapper -hidden"></div>
+      <% end %>
+
+      <div class="l-content -br-bottom wrapper<% if !browser.device.mobile? %> -no-br<% end %>">
         <h2 class=""><%= t 'investigators' %></h2>
         <% if @followPeople.size <= 0 %>
           <p>No investigators</p>
@@ -44,25 +66,27 @@
   <div class="column row small-12 medium-4">
     <aside class="l-sidebar -no-pad">
 
-      <div id="userSearch" class="l-content -no-br wrapper">
-        <div class="c-input-row">
-          <div id="search-input"></div>
-          <svg class="c-icon icon-search -medium -secondary">
-            <use xlink:href="#icon-search"></use>
-          </svg>
-          <svg class="c-icon icon-close -medium -secondary -hidden js-clear-search">
-            <use xlink:href="#icon-close"></use>
-          </svg>
-        </div>
+      <% if !browser.device.mobile? %>
+        <div id="userSearch" class="l-content -no-br wrapper">
+          <div class="c-input-row">
+            <div id="search-input"></div>
+            <svg class="c-icon icon-search -medium -secondary">
+              <use xlink:href="#icon-search"></use>
+            </svg>
+            <svg class="c-icon icon-close -medium -secondary -hidden js-clear-search">
+              <use xlink:href="#icon-close"></use>
+            </svg>
+          </div>
 
-        <div class="c-spinner -start">
-          <div class="spinner-box">
-            <div class="icon"></div>
+          <div class="c-spinner -start">
+            <div class="spinner-box">
+              <div class="icon"></div>
+            </div>
           </div>
         </div>
-      </div>
 
-      <div id="search-list" class="l-content -no-br -no-top-padd wrapper -hidden"></div>
+        <div id="search-list" class="l-content -no-br -no-top-padd wrapper -hidden"></div>
+      <% end %>
 
       <div class="l-content wrapper">
         <h2><%= t 'countries' %></h2>
