Toggle lists on users network

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -14,7 +14,11 @@
   }
 
   &.-pad-bigger {
-    padding: $box-space + 15px;
+    padding: $base-space + 15px;
+
+    @media #{$mq-small} {
+      padding: $box-space + 15px;
+    }
   }
 
   &.-thin {
