Filters: regions selector

--- a/app/assets/javascripts/templates/filter_form.hbs
+++ b/app/assets/javascripts/templates/filter_form.hbs
@@ -11,21 +11,32 @@
   <div class="form-row">
   <div class="row">
     <div class="column small-12 medium-6">
-      <div id="countries" class="c-select"></div>
+      <div id="regions" class="c-select"></div>
     </div>
     <div class="column small-12 medium-6">
-      <div id="organization-types" class="c-select"></div>
+      <div id="countries" class="c-select"></div>
     </div>
   </div>
   </div>
 
   <div class="form-row">
     <div class="row">
+      <div class="column small-12 medium-6">
+        <div id="organization-types" class="c-select"></div>
+      </div>
       <div class="column small-12 medium-6">
         <div id="cancer-types" class="c-select"></div>
       </div>
+    </div>
+  </div>
+
+  <div class="form-row">
+    <div class="row">
       <div class="column small-12 medium-6">
         <div id="organizations" class="c-select"></div>
+      </div>
+      <div class="column small-12 medium-6">
+        <div id="project-types" class="c-select"></div>
       </div>
     </div>
   </div>
@@ -33,11 +44,8 @@
   <div class="form-row">
     <div class="row">
       <div class="column small-12 medium-6">
-        <div id="project-types" class="c-select"></div>
-      </div>
-      <div class="column small-12 medium-6">
         <div id="funding-sources" class="c-select"></div>
-      </div>
+      </div>      
     </div>
   </div>
 
